cmake_minimum_required(VERSION 3.5)
project(dgolear)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ft_printf/checker.c
    ft_printf/conversion.c
    ft_printf/ft_printf.c
    ft_printf/ft_printf.h
    ft_printf/main.c
    ft_printf/print_char.c
    ft_printf/print_int.c
    ft_printf/print_int1.c
    ft_printf/print_string.c
    ft_atoi.c
    ft_atoi_base.c
    ft_bzero.c
    ft_isalnum.c
    ft_isalpha.c
    ft_isascii.c
    ft_isblank.c
    ft_isdigit.c
    ft_islower.c
    ft_isprint.c
    ft_isspace.c
    ft_isupper.c
    ft_itoa.c
    ft_lstadd.c
    ft_lstdel.c
    ft_lstdelone.c
    ft_lstiter.c
    ft_lstmap.c
    ft_lstnew.c
    ft_memalloc.c
    ft_memccpy.c
    ft_memchr.c
    ft_memcmp.c
    ft_memcpy.c
    ft_memdel.c
    ft_memmove.c
    ft_memset.c
    ft_nbrlen.c
    ft_putchar.c
    ft_putchar_fd.c
    ft_putendl.c
    ft_putendl_fd.c
    ft_puterr.c
    ft_putnbr.c
    ft_putnbr_fd.c
    ft_putnstr.c
    ft_putnwstr.c
    ft_putstr.c
    ft_putstr_fd.c
    ft_puttab.c
    ft_putwchar.c
    ft_putwchar_fd.c
    ft_putwstr.c
    ft_putwstr_fd.c
    ft_strcat.c
    ft_strchr.c
    ft_strclr.c
    ft_strcmp.c
    ft_strcpy.c
    ft_strdel.c
    ft_strdup.c
    ft_strequ.c
    ft_striter.c
    ft_striteri.c
    ft_strjoin.c
    ft_strlcat.c
    ft_strlen.c
    ft_strmap.c
    ft_strmapi.c
    ft_strncat.c
    ft_strncmp.c
    ft_strncpy.c
    ft_strndup.c
    ft_strnequ.c
    ft_strnew.c
    ft_strnstr.c
    ft_strrchr.c
    ft_strsplit.c
    ft_strstr.c
    ft_strsub.c
    ft_strtrim.c
    ft_tolower.c
    ft_toupper.c
    ft_wstrlen.c
    get_next_line.c
    libft.h)

add_executable(dgolear ${SOURCE_FILES})